--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@ node_modules
 .DS_Store
 .idea
 .vscode
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
